--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Responsive Header & Footer design</title>
-    <link rel="icon" href="resources/auctioner.png" type="image/png">       <!-- Setting the favicon-->
+    <!-- <link rel="icon" href="resources/auctioner.png" type="image/png">       Setting the favicon -->
     <!--Stylesheets..-->
     <link href="./css/styles.css" rel="stylesheet" type="text/css">   <!--Custom Stylesheet-->
     <link href="./css/header-styling.css" rel="stylesheet" type="text/css">
