--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -7,6 +7,7 @@ body{
     align-items: center;
     /* background-color: powderblue; */
     background-image: linear-gradient(rgb(216, 243, 253),#04a78c);
+    background-repeat: no-repeat;
       font-family: sans-serif;
       font-weight:bold;
 }
