--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,8 +23,8 @@
             <ul>
                 <li ><a href="#" >Expolre Auction</a></li>
                
-                <li ><a href ="/wanttoauction?name=<%=records.id%>">Want to auction</a></li>
-                <li><a href="/home?name=<%=records.id%>">Home</a></li>
+                <li ><a href ="/wanttoauction">Want to auction</a></li>
+                <li><a href="/home">Home</a></li>
             </ul>
           </div>
         </div>
