--- a/public/css/ash.css
+++ b/public/css/ash.css
@@ -149,22 +149,34 @@ header .search .fa-search{
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 221px;
+  height: auto;
+}
+.left{
+  margin-top: 30px;
+  width:70%;
+  margin-left: 10px;
+  height: auto;
+}
+
+.left input{
+  width:70%;
+  height:20px;
+ 
 }
 .right {
-  margin-right: 200px;
   margin-top: 30px;
-  display:flex;
-  justify-content: space-between;
-  width:50%;
+  width:30%;
 }
 .rightright input{
-    width:80px;
-    height:40px;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top:50px;
-    background-image: linear-gradient(rgb(0, 204, 255),rgb(58, 58, 241));
+  width:80px;
+  height:40px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top:50px;
+  background-image: linear-gradient(rgb(0, 204, 255),rgb(58, 58, 241));
+  display: block;
+  /* float: 50%; */
+  margin-left: 70%;
 }
 .right p{
     font-weight: bold;
