--- a/public/css/header-styling.css
+++ b/public/css/header-styling.css
@@ -1,10 +1,10 @@
-@import url('https:fonts.googleapis.com/css?family=Poppins:200,300,400,500,700,800,900&display=swap');
+/* @import url('https:fonts.googleapis.com/css?family=Poppins:200,300,400,500,700,800,900&display=swap'); */
 *{
-    font-family: 'Poppins', 'sans-serif';
     margin:0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-size: 18px;
 }   
 
 /*Styling the header..*/
