--- a/views/buyer.ejs
+++ b/views/buyer.ejs
@@ -27,7 +27,7 @@
              <h2 style="font-family: sans-serif;font-size: 30px;">Product Name: <%=records.namei%></h2>
              <p  id="1" style="font-weight: bolder;">Base_Price:  $<%=records.amount%></p>
              <p style="font-weight: bolder;">Current-Bidd: $<%=records.min%></p>
-             <p>Description:  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas consectetur repudiandae voluptates quae eaque id neque fa</p>
+             <p>Description:  <%=records.descri%></p>
              <br>
           <form action="/buyer" method="post">
             <p style="font-size: 16px;font-weight: bold;">Bidder Details<p>
