--- a/public/css/ash.css
+++ b/public/css/ash.css
@@ -147,16 +147,26 @@ header .search .fa-search{
 .middlebot {
 
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
-  height: 221px;
+  height: auto;
+}
+.left{
+  margin-top: 30px;
+   width:70%;
+   height: auto;
+}
+.left input{
+  /* width: 130px; */
+  width:70%;
+  height:20px;
+
 }
 .right {
-  margin-right: 200px;
+  /* margin-right: 200px; */
   margin-top: 30px;
-  display:flex;
-  justify-content: space-between;
-  width:50%;
+  width:30%;
+
 }
 .rightright input{
     width:80px;
@@ -165,11 +175,12 @@ header .search .fa-search{
     cursor: pointer;
     margin-top:50px;
     background-image: linear-gradient(rgb(0, 204, 255),rgb(58, 58, 241));
+    display: block;
+    /* float: 50%; */
+    margin-left: 70%;
 }
 .right p{
     font-weight: bold;
-
-    
 }
 
 /*footer*/
